# czw2025-05

./: .gitignore
code/: Cargo.toml
code/day3/axum_hello/: Cargo.toml
code/day3/axum_hello/src/: main.rs
code/day3/axum_post/: Cargo.toml
code/day3/axum_post/src/: main.rs
code/day3/axum_users1/: Cargo.toml
code/day3/axum_users1/src/: main.rs
code/day3/axum_users_arc/: Cargo.toml  users.json
code/day3/axum_users_arc/src/: main.rs
code/day3/reqwest_client/: Cargo.toml
code/day3/reqwest_client/src/: main.rs
code/day3/reqwest_client_post/: Cargo.toml
code/day3/reqwest_client_post/src/: main.rs
live/authentication/: Cargo.toml
live/authentication/src/: lib.rs
live/hello_world2/: Cargo.toml
live/hello_world2/src/: main.rs
live/login_manager/: Cargo.toml  users.json
live/login_manager/src/: main.rs
live_day2/first_thread/: Cargo.toml
live_day2/first_thread/src/: main.rs
live_day3/reqwest_client/: Cargo.toml
live_day3/reqwest_client/src/: main.rs
live_day3/safety/: Cargo.toml
live_day3/safety/src/: main.rs
live_day3/webserver/: Cargo.toml
live_day3/webserver/src/: main.rs
live_day4/project_structure/: Cargo.toml
live_day4/project_structure/src/: main.rs  my_module.rs
live_day4/project_structure/src/foobar/: mod.rs
live_day4/project_structure/test_library/: Cargo.toml
live_day4/webserver_simple/: Cargo.toml  Dockerfile
live_day4/webserver_simple/src/: main.rs
manual/: book.toml
manual/src/: SUMMARY.md
manual/src/day1/: f10_while.md  f11_scopes.md  f12_scope_expr.md  f13_scope_shadowing.md  f14_unit_type.md  f15_copy_types.md  f15_move_default_fn.md  f15_move_default_fn_borrow.md  f15_move_default_fn_borrow_mut.md  f15_move_default_fn_return.md  f15_move_default_fn_unexpected.md  f15_what_is_a_move.md  f1_hello_world.md  f2_variable_print.md  f3_types.md  f4_one_plus_one.md  f4_one_plus_one_mut.md  f4_one_plus_one_shadow.md  f4_recap_workshop.md  f5_control_flow.md  f6_if.md  f7_for.md  f8_fizzbuzz.md  f9_loop.md  fundamentals_intro.md  hello_world.md  intro.md  library1_terms.md  library_ws1.md  library_ws2.md  library_ws3.md  library_ws4.md  library_ws5.md  login_serialization.md  login_sys_enums.md  login_sys_simple.md  login_sys_structs  login_sys_vectors.md  setup_rust.md  text_input.md  (+1 more)
manual/src/day2/: first_thread.md  interior_mutability.md  mutexes.md
manual/src/day3/: alloc.md  practical.md  practical2.md  practical3.md
manual/src/day4/: docker.md  file_structure.md  python_from_rust.md  workspaces.md
(+1 files in other folders)
