[package]
name = "czw"
version = "0.1.0"
edition = "2024"

[dependencies]
[workspace]
members = [
    # Day 1 Content
    "day1/hello_world",
    "day1/vars_mut_shadow",
    "day1/function_returns",
    "day1/borrow_reference",
    "day1/text_input",
    "day1/auth",
    "day1/login",
    "day1/auth_enum",
    "day1/login_enum",
    "day1/auth_enum_data",
    "day1/login_enum_data",
    "day1/auth_enum_option",
    "day1/login_enum_option",
    "day1/auth_struct",
    "day1/login_struct",
    "day1/auth_vec",
    "day1/login_vec",
    "day1/vector_growth",
    "day1/auth_hashmap",
    "day1/login_hashmap",
    "day1/hash_vec_bench",
    "day1/hash_vec_search",
    "day1/auth_json",
    "day1/login_json",
    "day1/auth_hash",
    "day1/login_hash",
    "day1/login_manager",
    "day1/auth_login_manager",

    # Day 2 Content
    "day2/first_thread",
    "day2/thread_closures",
    "day2/thread_return",
    "day2/divide_workload",
    "day2/scoped_threads",
    "day2/thread_builder",
    "day2/data_race",
    "day2/atomic_counter",
    "day2/atomic_counter_timed",
    "day2/mutex",
    "day2/mutex_timed",
    "day2/rwlock",
    "day2/parking",
    "day2/lockfree_map",
    "day2/deadlocks",
    "day2/mutex_poisoning",
    "day2/mpsc",
    "day2/mpsc_ownership",
    "day2/mpsc_ownership_timed",
    "day2/sending_functions",
    "day2/sending_commands_and_functions",
    "day2/work_queue",
    "day2/thread_affinity",
    "day2/thread_priorities",
    "day2/rayon_par_iter",
    "day2/rayon_scopes",
    "day2/rayon_nested_pools",
    "day2/rayon_broadcast",
    "day2/rayon_join",
]